[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seismic-risk"
version = "0.1.0"
description = "Real-time seismic risk scoring for global aviation infrastructure"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Kshitij Vaidya" },
]
keywords = ["seismic", "earthquake", "aviation", "risk", "usgs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "reverse_geocoder>=1.5.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "responses>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-requests>=2.31.0",
    "pandas-stubs>=2.0.0",
    "httpx>=0.27.0",
]
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]
jupyter = [
    "notebook>=7.0.0",
    "folium>=0.14.0",
]

[project.scripts]
seismic-risk = "seismic_risk.cli:app"

[project.urls]
Homepage = "https://github.com/KayKv10/seismic-risk"
Repository = "https://github.com/KayKv10/seismic-risk"
Issues = "https://github.com/KayKv10/seismic-risk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/seismic_risk"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "scripts"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "reverse_geocoder"
ignore_missing_imports = true
